# my-zsh

./: .gitignore  .zshrc  AUTOCOMPLETION_SETUP.md  INSTALL_WSL.md  README.md  example.zshrc  pyproject.toml  setup.ps1  setup.sh
functions/: _git_completions.zsh  cursor.zsh  docker.zsh  example-functions.zsh  git-functions.zsh  git.zsh  ruff.zsh  terraform.zsh
mac-automations/: DBEAVER-ENTRA-ID-CHROME.md  ENTRA-ID-CHROME.md
ms/: alembic_ops.py  cli.py  config.py  docker_compose_ops.py  envfile.py  exitcodes.py  git_ops.py  preflight.py  venv_ops.py  workspace.py
themes/: simple.zsh-theme
